--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
             <ul class="contact-me">
                 <li class="github"><a href="https://github.com/" target="_blank">GitHub</a></li>
-                <li class="frontend-mentor"><a href="" target="_blank">Frontend Mentor</a></li>
-                <li class="linkedin"><a href="" target="_blank">LinkedIn</a></li>
-                <li class="twitter"><a href="" target="_blank">Twitter</a></li>
-                <li class="instagram"><a href="" target="_blank">Instagram</a></li>
+                <li class="frontend-mentor"><a href="https://www.frontendmentor.io/" target="_blank">Frontend Mentor</a></li>
+                <li class="linkedin"><a href="https://www.linkedin.com/"" target="_blank">LinkedIn</a></li>
+                <li class="twitter"><a href="https://twitter.com/" target="_blank">Twitter</a></li>
+                <li class="instagram"><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
             </ul>
         </div>
     </main>
